# CoronaBot

./: .gitignore  README.md  main.py  notes.txt  pyproject.toml  requirements.txt  test.ipynb  test.py
