[tool.poetry]
name = "coronabotv2"
version = "0.1.0"
description = ""
authors = ["Dylanvh45 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.7"
pandas = "^1.2.4"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
